Bug 442865 - Warning message last line truncated
Summary: Warning message last line truncated
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-23 22:33 UTC by medin
Modified: 2021-10-04 20:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.88
Sentry Crash Report:


Attachments
Warning message last line truncated in first try (1.37 MB, video/mp4)
2021-09-23 22:33 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2021-09-23 22:33:14 UTC
Created attachment 141849 [details]
Warning message last line truncated in first try

This happens only once after you launch Dolphin. See attached video for more info.
Comment 1 Nate Graham 2021-09-24 19:36:22 UTC
Could be caused by any of:

1. A bug in how KMessageWidget determines its height based on the text
2. A bug in how Dolphin lays our or sized the message widget
3. Mis-formatted text coming from the trash kioslave
Comment 2 Nate Graham 2021-09-24 19:38:27 UTC
Found the bug, it's #3.
Comment 3 Bug Janitor Service 2021-09-24 19:42:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/591
Comment 4 Nate Graham 2021-10-04 20:44:09 UTC
Git commit bd5af64fe305af4e46bafffca87941f8182bf417 by Nate Graham.
Committed on 04/10/2021 at 20:37.
Pushed by ngraham into branch 'master'.

Improve "trash is full" error message

This error message was mis-formatted in several ways:
* Using an exclamation point
* An inappropriate line break (the UI that displays it should be
  responsible for ensuring a sane maximum width and/or text wrap
  as needed)
* The wrong formatting for a line break (\n instead of KUIT
  formatting)
* A grammatically incorrect word ("cleanup" used as a verb, when it is
  a noun).

This commit fixes those issues.
FIXED-IN: 5.87

M  +1    -1    src/ioslaves/trash/trashimpl.cpp

https://invent.kde.org/frameworks/kio/commit/bd5af64fe305af4e46bafffca87941f8182bf417