Improve "trash is full" error message

This error message was mis-formatted in several ways:
* Using an exclamation point
* An inappropriate line break (the UI that displays it should be
  responsible for ensuring a sane maximum width and/or text wrap
  as needed)
* The wrong formatting for a line break (\n instead of KUIT
  formatting)
* A grammatically incorrect word ("cleanup" used as a verb, when it is
  a noun).

This commit fixes those issues.

BUG: 442865
FIXED-IN: 5.87